--- a/KontrolerKomunikacyjny/MainWindow.xaml
+++ b/KontrolerKomunikacyjny/MainWindow.xaml
@@ -3,20 +3,20 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       Title="Kontroler komunikacyjny na intefejsie RS" Height="600" Width="998">
     <Grid Height="544">
-        <Button Content="Otwórz plik XML" Height="67" HorizontalAlignment="Left" Margin="12,25,0,0" Name="OtworzPrzycisk" VerticalAlignment="Top" Width="117" Click="button1_Click" />
+        <Button Content="Otwórz plik XML" Height="67" HorizontalAlignment="Left" Margin="63,25,0,0" Name="OtworzPrzycisk" VerticalAlignment="Top" Width="117" Click="button1_Click" />
         <Button Content="Wyślij" Height="58" HorizontalAlignment="Left" Margin="363,214,0,0" Name="WyslijPrzycisk" VerticalAlignment="Top" Width="120" Click="WyslijPrzycisk_Click" />
         <TextBox Height="35" HorizontalAlignment="Left" Margin="361,47,0,0" Name="AdresSlaveTextbox" VerticalAlignment="Top" Width="120" />
-        <TextBox Height="35" HorizontalAlignment="Left" Margin="361,84,0,0" Name="FunkcjaTextbox" VerticalAlignment="Top" Width="120" />        <Label Height="410" HorizontalAlignment="Left" Margin="724,76,0,0" Name="ChatEtykieta" VerticalAlignment="Top" Width="221" />
-   <TextBox Height="35" HorizontalAlignment="Left" Margin="361,148,0,0" Name="DaneTextbox" VerticalAlignment="Top" Width="120" />     <Label Content="Urządzenia w systemie" Height="28" HorizontalAlignment="Left" Margin="12,131,0,0" Name="label2" VerticalAlignment="Top" Width="155" />
+        <TextBox Height="35" HorizontalAlignment="Left" Margin="361,84,0,0" Name="FunkcjaTextbox" VerticalAlignment="Top" Width="120" />        <Label Height="410" HorizontalAlignment="Left" Margin="740,76,0,0" Name="ChatEtykieta" VerticalAlignment="Top" Width="221" />
+   <TextBox Height="35" HorizontalAlignment="Left" Margin="361,148,0,0" Name="DaneTextbox" VerticalAlignment="Top" Width="120" />     <Label Content="URZĄDZENIA W SYSTEMIE" Height="28" HorizontalAlignment="Left" Margin="12,131,0,0" Name="label2" VerticalAlignment="Top" Width="155" />
         <Label  Height="26" HorizontalAlignment="Left" Margin="280,145,0,0" Name="DaneLabel" VerticalAlignment="Top" Width="130" />
 
         <Label  Height="26" HorizontalAlignment="Left" Margin="280,84,0,0" Name="FunkcjaLabel" VerticalAlignment="Top" Width="130" />
         <Label Height="26" HorizontalAlignment="Left" Margin="280,56,0,0" Name="AdresSlaveLabel" VerticalAlignment="Top" Width="130" />
  
         <Label Content="MASTER" Height="31" HorizontalAlignment="Left" Margin="278,8,0,0" Name="label5" VerticalAlignment="Top" Width="205" />
-        <Label Content="Podgląd ramek" Height="31" HorizontalAlignment="Left" Margin="724,25,0,0" Name="label6" VerticalAlignment="Top" Width="205" />
+        <Label Content="PODGLĄD RAMEK" Height="31" HorizontalAlignment="Left" Margin="740,25,0,0" Name="label6" VerticalAlignment="Top" Width="205" />
         
-        <Label Height="129" HorizontalAlignment="Left" Margin="12,165,0,0" Name="UrzadzeniaWSystemieLabel" VerticalAlignment="Top" Width="139" />
+        <Label Height="129" HorizontalAlignment="Left" Margin="12,165,0,0" Name="UrzadzeniaWSystemieLabel" VerticalAlignment="Top" Width="242" />
         <Label Content="Adres slave" Height="26" HorizontalAlignment="Left" Margin="21,362,0,0" Name="label3" VerticalAlignment="Top" Width="130" />
         <Label Content="Ilość wejść" Height="26" HorizontalAlignment="Left" Margin="21,411,0,0" Name="label4" VerticalAlignment="Top" Width="130" />
         <Label Content="Ilość wyjść" Height="26" HorizontalAlignment="Left" Margin="21,460,0,0" Name="label7" VerticalAlignment="Top" Width="130" />
@@ -32,7 +32,9 @@
         <Label Content="Błąd" Height="26" HorizontalAlignment="Left" Margin="501,47,0,0" Name="BladMasterAdresLabel" VerticalAlignment="Top" Width="190" />
         <Label Content="Błąd " Height="26" HorizontalAlignment="Left" Margin="501,96,0,0" Name="BladMasterFunkcjaLabel" VerticalAlignment="Top" Width="190" />
         <Label Content="Błąd" Height="26" HorizontalAlignment="Left" Margin="501,157,0,0" Name="BladMasterDaneLabel" VerticalAlignment="Top" Width="190" />
-        <Frame Background="Black" Height="461" HorizontalAlignment="Left" Margin="705,25,0,0" Name="frame3" VerticalAlignment="Top" Width="13" />
-        <Frame Background="Black" Height="14" HorizontalAlignment="Left" Margin="712,47,0,0" Name="frame4" VerticalAlignment="Top" Width="252" />
+        <Frame Background="Black" Height="461" HorizontalAlignment="Right" Margin="0,25,258,0" Name="frame3" VerticalAlignment="Top" Width="7" />
+        <Label Content="DODAWANIE NOWEGO SLAVE" Height="28" HorizontalAlignment="Left" Margin="12,313,0,0" Name="label1" VerticalAlignment="Top" Width="168" />
+        <Frame Background="Black" Height="295" HorizontalAlignment="Left" Margin="268,12,0,0" Name="frame5" VerticalAlignment="Top" Width="6" />
+        <Frame Background="Black" Height="7" HorizontalAlignment="Left" Margin="10,112,0,0" Name="frame6" VerticalAlignment="Top" Width="264" />
     </Grid>
 </Window>
