--- a/KontrolerKomunikacyjny/MainWindow.xaml
+++ b/KontrolerKomunikacyjny/MainWindow.xaml
@@ -1,8 +1,12 @@
 ﻿<Window x:Class="KontrolerKomunikacyjny.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      Title="Kontroler komunikacyjny na intefejsie RS" Height="600" Width="998">
-    <Grid Height="544">
+      Title="Kontroler komunikacyjny na intefejsie RS" Height="717" Width="1093">
+    <Grid Height="681" Width="1061">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="538*" />
+            <RowDefinition Height="6*" />
+        </Grid.RowDefinitions>
         <Button Content="Otwórz plik XML" Height="67" HorizontalAlignment="Left" Margin="63,25,0,0" Name="OtworzPrzycisk" VerticalAlignment="Top" Width="117" Click="button1_Click" />
         <Button Content="Wyślij" Height="58" HorizontalAlignment="Left" Margin="542,296,0,0" Name="WyslijPrzycisk" VerticalAlignment="Top" Width="120" Click="WyslijPrzycisk_Click" />
         <TextBox Height="35" HorizontalAlignment="Left" Margin="361,47,0,0" Name="AdresSlaveTextbox" VerticalAlignment="Top" Width="120" />
@@ -32,7 +36,7 @@
         <Label Content="Błąd" Height="26" HorizontalAlignment="Left" Margin="501,47,0,0" Name="BladMasterAdresLabel" VerticalAlignment="Top" Width="190" />
         <Label Content="Błąd " Height="26" HorizontalAlignment="Left" Margin="501,96,0,0" Name="BladMasterFunkcjaLabel" VerticalAlignment="Top" Width="190" />
         <Label Content="Błąd" Height="26" HorizontalAlignment="Left" Margin="501,174,0,0" Name="BladMasterAdresWeWyLabel" VerticalAlignment="Top" Width="190" />
-        <Frame Background="Black" Height="461" HorizontalAlignment="Right" Margin="0,25,258,0" Name="frame3" VerticalAlignment="Top" Width="7" />
+        <Frame Background="Black" Height="461" HorizontalAlignment="Right" Margin="0,25,327,0" Name="frame3" VerticalAlignment="Top" Width="7" />
         <Label Content="DODAWANIE NOWEGO SLAVE" Height="28" HorizontalAlignment="Left" Margin="12,313,0,0" Name="label1" VerticalAlignment="Top" Width="168" />
         <Frame Background="Black" Height="295" HorizontalAlignment="Left" Margin="268,12,0,0" Name="frame5" VerticalAlignment="Top" Width="6" />
         <Frame Background="Black" Height="7" HorizontalAlignment="Left" Margin="10,112,0,0" Name="frame6" VerticalAlignment="Top" Width="264" />
@@ -40,5 +44,8 @@
         <Label Height="26" HorizontalAlignment="Left" Margin="291,221,0,0" Name="WartoscLabel" VerticalAlignment="Top" Width="130" />
         <Label Content="Błąd" Height="26" HorizontalAlignment="Left" Margin="501,221,0,0" Name="BladMasterWartoscLabel" VerticalAlignment="Top" Width="190" />
         <Label Height="24" HorizontalAlignment="Left" Margin="300,131,0,0" Name="DaneLabel" VerticalAlignment="Top" Width="175" />
+        <ComboBox Height="23" HorizontalAlignment="Left" Margin="21,581,0,0" Name="comboBox1" VerticalAlignment="Top" Width="120" ItemsSource="{Binding}"></ComboBox>
+        <Label Content="WYBIERZ PORT" Height="28" HorizontalAlignment="Left" Margin="25,547,0,0" Name="label8" VerticalAlignment="Top" Width="155" />
+        <Frame Background="Black" Height="12" HorizontalAlignment="Left" Margin="10,538,0,0" Name="frame4" VerticalAlignment="Top" Width="438" />
     </Grid>
 </Window>
