--- a/KontrolerKomunikacyjny/MainWindow.xaml
+++ b/KontrolerKomunikacyjny/MainWindow.xaml
@@ -7,11 +7,11 @@
             <RowDefinition Height="538*" />
             <RowDefinition Height="6*" />
         </Grid.RowDefinitions>
-        <Button Content="Otwórz plik XML" Height="67" HorizontalAlignment="Left" Margin="63,25,0,0" Name="OtworzPrzycisk" VerticalAlignment="Top" Width="117" Click="button1_Click" />
+        <Button Content="Otwórz plik XML" Height="67" HorizontalAlignment="Left" Margin="7,23,0,0" Name="OtworzPrzycisk" VerticalAlignment="Top" Width="117" Click="button1_Click" />
         <Button Content="Wyślij" Height="58" HorizontalAlignment="Left" Margin="542,296,0,0" Name="WyslijPrzycisk" VerticalAlignment="Top" Width="120" Click="WyslijPrzycisk_Click" />
         <TextBox Height="35" HorizontalAlignment="Left" Margin="361,47,0,0" Name="AdresSlaveTextbox" VerticalAlignment="Top" Width="120" />
-        <TextBox Height="35" HorizontalAlignment="Left" Margin="361,84,0,0" Name="FunkcjaTextbox" VerticalAlignment="Top" Width="120" />        <Label Height="410" HorizontalAlignment="Left" Margin="740,76,0,0" Name="ChatEtykieta" VerticalAlignment="Top" Width="221" />
-   <TextBox Height="35" HorizontalAlignment="Left" Margin="361,165,0,0" Name="AdresWeWyTextbox" VerticalAlignment="Top" Width="120" />     <Label Content="URZĄDZENIA W SYSTEMIE" Height="28" HorizontalAlignment="Left" Margin="12,131,0,0" Name="label2" VerticalAlignment="Top" Width="155" />
+        <TextBox Height="35" HorizontalAlignment="Left" Margin="361,84,0,0" Name="FunkcjaTextbox" VerticalAlignment="Top" Width="120" />        <Label Height="410" HorizontalAlignment="Left" Margin="740,50,0,0" Name="ChatEtykieta" VerticalAlignment="Top" Width="221" />
+   <TextBox Height="35" HorizontalAlignment="Left" Margin="361,165,0,0" Name="AdresWeWyTextbox" VerticalAlignment="Top" Width="120" />
         <Label  Height="26" HorizontalAlignment="Left" Margin="291,165,0,0" Name="AdresWyWeLabel" VerticalAlignment="Top" Width="130" />
 
         <Label  Height="26" HorizontalAlignment="Left" Margin="280,84,0,0" Name="FunkcjaLabel" VerticalAlignment="Top" Width="130" />
@@ -19,33 +19,35 @@
  
         <Label Content="MASTER" Height="31" HorizontalAlignment="Left" Margin="278,8,0,0" Name="label5" VerticalAlignment="Top" Width="205" />
         <Label Content="PODGLĄD RAMEK" Height="31" HorizontalAlignment="Left" Margin="740,25,0,0" Name="label6" VerticalAlignment="Top" Width="205" />
-        
-        <Label Height="129" HorizontalAlignment="Left" Margin="12,165,0,0" Name="UrzadzeniaWSystemieLabel" VerticalAlignment="Top" Width="242" />
-        <Label Content="Adres slave" Height="26" HorizontalAlignment="Left" Margin="21,362,0,0" Name="label3" VerticalAlignment="Top" Width="130" />
-        <Label Content="Ilość wejść" Height="26" HorizontalAlignment="Left" Margin="21,411,0,0" Name="label4" VerticalAlignment="Top" Width="130" />
-        <Label Content="Ilość wyjść" Height="26" HorizontalAlignment="Left" Margin="21,460,0,0" Name="label7" VerticalAlignment="Top" Width="130" />
-        <TextBox Height="35" HorizontalAlignment="Left" Margin="93,402,0,0" Name="IloscWejscTextbox" VerticalAlignment="Top" Width="120" />
-        <TextBox Height="35" HorizontalAlignment="Left" Margin="93,451,0,0" Name="IloscWyjscTextbox" VerticalAlignment="Top" Width="120" />
-        <Label Content="Wpisz poprawny adres (1-247)" Height="26" HorizontalAlignment="Left" Margin="231,362,0,0" Name="BladAdresSlaveLabel" VerticalAlignment="Top" Width="190" />
-        <Label Content="Wpisz poprawną ilość wejść (1-32)" Height="26" HorizontalAlignment="Left" Margin="231,411,0,0" Name="BladIloscWejscLabel" VerticalAlignment="Top" Width="190" />
-        <Label Content="Wpisz poprawną ilość wyjść (1-32)" Height="26" HorizontalAlignment="Left" Margin="231,460,0,0" Name="BladIloscWyjscLabel" VerticalAlignment="Top" Width="190" />
         <Frame Height="6" HorizontalAlignment="Left" Margin="7,301,0,0" Name="frame1" VerticalAlignment="Top" Width="441" Background="Black" />
         <Frame Height="231" HorizontalAlignment="Left" Margin="442,301,0,0" Name="frame2" VerticalAlignment="Top" Width="6" Background="Black" />
-        <Button Content="Dodaj urządzenie do systemu" Height="33" HorizontalAlignment="Left" Margin="258,499,0,0" Name="button2" VerticalAlignment="Top" Width="150" Click="button2_Click" />
-        <TextBox Height="35" HorizontalAlignment="Left" Margin="93,362,0,0" Name="DodajAdresTextbox" VerticalAlignment="Top" Width="120" />
         <Label Content="Błąd" Height="26" HorizontalAlignment="Left" Margin="501,47,0,0" Name="BladMasterAdresLabel" VerticalAlignment="Top" Width="190" />
         <Label Content="Błąd " Height="26" HorizontalAlignment="Left" Margin="501,96,0,0" Name="BladMasterFunkcjaLabel" VerticalAlignment="Top" Width="190" />
         <Label Content="Błąd" Height="26" HorizontalAlignment="Left" Margin="501,174,0,0" Name="BladMasterAdresWeWyLabel" VerticalAlignment="Top" Width="190" />
         <Frame Background="Black" Height="461" HorizontalAlignment="Right" Margin="0,25,327,0" Name="frame3" VerticalAlignment="Top" Width="7" />
-        <Label Content="DODAWANIE NOWEGO SLAVE" Height="28" HorizontalAlignment="Left" Margin="12,313,0,0" Name="label1" VerticalAlignment="Top" Width="168" />
         <Frame Background="Black" Height="295" HorizontalAlignment="Left" Margin="268,12,0,0" Name="frame5" VerticalAlignment="Top" Width="6" />
         <Frame Background="Black" Height="7" HorizontalAlignment="Left" Margin="10,112,0,0" Name="frame6" VerticalAlignment="Top" Width="264" />
         <TextBox Height="35" HorizontalAlignment="Left" Margin="361,221,0,0" Name="WartoscTextbox" VerticalAlignment="Top" Width="120" />
         <Label Height="26" HorizontalAlignment="Left" Margin="291,221,0,0" Name="WartoscLabel" VerticalAlignment="Top" Width="130" />
         <Label Content="Błąd" Height="26" HorizontalAlignment="Left" Margin="501,221,0,0" Name="BladMasterWartoscLabel" VerticalAlignment="Top" Width="190" />
         <Label Height="24" HorizontalAlignment="Left" Margin="300,131,0,0" Name="DaneLabel" VerticalAlignment="Top" Width="175" />
-        <ComboBox Height="23" HorizontalAlignment="Left" Margin="21,581,0,0" Name="comboBox1" VerticalAlignment="Top" Width="120" ItemsSource="{Binding}"></ComboBox>
-        <Label Content="WYBIERZ PORT" Height="28" HorizontalAlignment="Left" Margin="25,547,0,0" Name="label8" VerticalAlignment="Top" Width="155" />
-        <Frame Background="Black" Height="12" HorizontalAlignment="Left" Margin="10,538,0,0" Name="frame4" VerticalAlignment="Top" Width="438" />
+        <ComboBox Height="23" HorizontalAlignment="Left" Margin="138,50,0,0" Name="comboBox1" VerticalAlignment="Top" Width="120" ItemsSource="{Binding}"></ComboBox>
+        <Label Content="WYBIERZ PORT" Height="28" HorizontalAlignment="Left" Margin="138,11,0,0" Name="label8" VerticalAlignment="Top" Width="155" />
+        <Label Content="Adres slave" Height="26" HorizontalAlignment="Left" Margin="21,375,0,0" Name="label3" VerticalAlignment="Top" Width="130" />
+        <Label Content="Ilość wejść" Height="26" HorizontalAlignment="Left" Margin="21,424,0,0" Name="label4" VerticalAlignment="Top" Width="130" />
+        <Label Content="Ilość wyjść" Height="26" HorizontalAlignment="Left" Margin="21,473,0,0" Name="label7" VerticalAlignment="Top" Width="130" />
+        <TextBox Height="35" HorizontalAlignment="Left" Margin="93,415,0,0" Name="IloscWejscTextbox" VerticalAlignment="Top" Width="120" />
+        <TextBox Height="35" HorizontalAlignment="Left" Margin="93,464,0,0" Name="IloscWyjscTextbox" VerticalAlignment="Top" Width="120" />
+        <Label Content="Wpisz poprawny adres (1-247)" Height="26" HorizontalAlignment="Left" Margin="231,375,0,0" Name="BladAdresSlaveLabel" VerticalAlignment="Top" Width="190" />
+        <Label Content="Wpisz poprawną ilość wejść (1-32)" Height="26" HorizontalAlignment="Left" Margin="231,424,0,0" Name="BladIloscWejscLabel" VerticalAlignment="Top" Width="190" />
+        <Label Content="Wpisz poprawną ilość wyjść (1-32)" Height="26" HorizontalAlignment="Left" Margin="231,473,0,0" Name="BladIloscWyjscLabel" VerticalAlignment="Top" Width="190" />
+        <Button Content="Dodaj urządzenie do systemu" Height="33" HorizontalAlignment="Left" Margin="258,512,0,0" Name="button2" VerticalAlignment="Top" Width="150" />
+        <TextBox Height="35" HorizontalAlignment="Left" Margin="93,375,0,0" Name="DodajAdresTextbox" VerticalAlignment="Top" Width="120" />
+        <Label Content="DODAWANIE NOWEGO SLAVE" Height="28" HorizontalAlignment="Left" Margin="12,326,0,0" Name="label1" VerticalAlignment="Top" Width="168" />
+        <Label Content="LISTA URZĄDZEŃ W SYSTEMIE" Height="28" HorizontalAlignment="Left" Margin="464,382,0,0" Name="label2" VerticalAlignment="Top" Width="209" />
+        <Label Height="205" HorizontalAlignment="Left" Margin="464,416,0,0" Name="UrzadzeniaWSystemieLabel" VerticalAlignment="Top" Width="242" />
+        <Label Content="LISTA PROTOTYPÓW URZĄDZEŃ" Height="28" HorizontalAlignment="Left" Margin="10,127,0,0" Name="label9" VerticalAlignment="Top" Width="189" />
+        <Label Height="117" HorizontalAlignment="Left" Margin="10,161,0,0" Name="label10" VerticalAlignment="Top" Width="226" />
+        <ListBox Height="56" HorizontalAlignment="Left" Margin="32,592,0,0" Name="listBox1" VerticalAlignment="Top" Width="155" ItemsSource="{Binding}" />
     </Grid>
 </Window>
