--- a/KontrolerKomunikacyjny/MainWindow.xaml
+++ b/KontrolerKomunikacyjny/MainWindow.xaml
@@ -10,7 +10,7 @@
         <Button Content="Otwórz plik XML" Height="67" HorizontalAlignment="Left" Margin="7,23,0,0" Name="OtworzPrzycisk" VerticalAlignment="Top" Width="117" Click="button1_Click" />
         <Button Content="Wyślij" Height="58" HorizontalAlignment="Left" Margin="542,296,0,0" Name="WyslijPrzycisk" VerticalAlignment="Top" Width="120" Click="WyslijPrzycisk_Click" />
         <TextBox Height="35" HorizontalAlignment="Left" Margin="361,47,0,0" Name="AdresSlaveTextbox" VerticalAlignment="Top" Width="120" />
-        <TextBox Height="35" HorizontalAlignment="Left" Margin="361,84,0,0" Name="FunkcjaTextbox" VerticalAlignment="Top" Width="120" />        <Label Height="410" HorizontalAlignment="Left" Margin="740,50,0,0" Name="ChatEtykieta" VerticalAlignment="Top" Width="221" />
+        <TextBox Height="35" HorizontalAlignment="Left" Margin="361,84,0,0" Name="FunkcjaTextbox" VerticalAlignment="Top" Width="120" />        <Label Height="410" HorizontalAlignment="Left" Margin="812,50,0,0" Name="ChatEtykieta" VerticalAlignment="Top" Width="221" />
    <TextBox Height="35" HorizontalAlignment="Left" Margin="361,165,0,0" Name="AdresWeWyTextbox" VerticalAlignment="Top" Width="120" />
         <Label  Height="26" HorizontalAlignment="Left" Margin="291,165,0,0" Name="AdresWyWeLabel" VerticalAlignment="Top" Width="130" />
 
@@ -18,13 +18,13 @@
         <Label Height="26" HorizontalAlignment="Left" Margin="280,56,0,0" Name="AdresSlaveLabel" VerticalAlignment="Top" Width="130" />
  
         <Label Content="MASTER" Height="31" HorizontalAlignment="Left" Margin="278,8,0,0" Name="label5" VerticalAlignment="Top" Width="205" />
-        <Label Content="PODGLĄD RAMEK" Height="31" HorizontalAlignment="Left" Margin="740,25,0,0" Name="label6" VerticalAlignment="Top" Width="205" />
+        <Label Content="PODGLĄD RAMEK" Height="31" HorizontalAlignment="Left" Margin="812,25,0,0" Name="label6" VerticalAlignment="Top" Width="205" />
         <Frame Height="6" HorizontalAlignment="Left" Margin="7,301,0,0" Name="frame1" VerticalAlignment="Top" Width="441" Background="Black" />
         <Frame Height="231" HorizontalAlignment="Left" Margin="442,301,0,0" Name="frame2" VerticalAlignment="Top" Width="6" Background="Black" />
         <Label Content="Błąd" Height="26" HorizontalAlignment="Left" Margin="501,47,0,0" Name="BladMasterAdresLabel" VerticalAlignment="Top" Width="190" />
         <Label Content="Błąd " Height="26" HorizontalAlignment="Left" Margin="501,96,0,0" Name="BladMasterFunkcjaLabel" VerticalAlignment="Top" Width="190" />
         <Label Content="Błąd" Height="26" HorizontalAlignment="Left" Margin="501,174,0,0" Name="BladMasterAdresWeWyLabel" VerticalAlignment="Top" Width="190" />
-        <Frame Background="Black" Height="461" HorizontalAlignment="Right" Margin="0,25,327,0" Name="frame3" VerticalAlignment="Top" Width="7" />
+        <Frame Background="Black" Height="461" HorizontalAlignment="Right" Margin="0,25,255,0" Name="frame3" VerticalAlignment="Top" Width="7" />
         <Frame Background="Black" Height="295" HorizontalAlignment="Left" Margin="268,12,0,0" Name="frame5" VerticalAlignment="Top" Width="6" />
         <Frame Background="Black" Height="7" HorizontalAlignment="Left" Margin="10,112,0,0" Name="frame6" VerticalAlignment="Top" Width="264" />
         <TextBox Height="35" HorizontalAlignment="Left" Margin="361,221,0,0" Name="WartoscTextbox" VerticalAlignment="Top" Width="120" />
@@ -35,7 +35,7 @@
         <Label Content="WYBIERZ PORT" Height="28" HorizontalAlignment="Left" Margin="138,11,0,0" Name="label8" VerticalAlignment="Top" Width="155" />
         <Label Content="DODAWANIE NOWEGO SLAVE" Height="28" HorizontalAlignment="Left" Margin="12,326,0,0" Name="label1" VerticalAlignment="Top" Width="168" />
         <Label Content="LISTA URZĄDZEŃ W SYSTEMIE" Height="28" HorizontalAlignment="Left" Margin="464,382,0,0" Name="label2" VerticalAlignment="Top" Width="209" />
-        <Label Height="205" HorizontalAlignment="Left" Margin="464,416,0,0" Name="UrzadzeniaWSystemieLabel" VerticalAlignment="Top" Width="242" />
+        <Label Height="205" HorizontalAlignment="Left" Margin="464,416,0,0" Name="UrzadzeniaWSystemieLabel" VerticalAlignment="Top" Width="329" />
         <Label Content="LISTA PROTOTYPÓW URZĄDZEŃ" Height="28" HorizontalAlignment="Left" Margin="10,127,0,0" Name="label9" VerticalAlignment="Top" Width="189" />
         <ListBox Height="142" HorizontalAlignment="Left" Margin="12,153,0,0" Name="listBox1" VerticalAlignment="Top" Width="168" ItemsSource="{Binding}" SelectionChanged="listBox1_SelectionChanged"  >
             <ListBoxItem>Coil thingy</ListBoxItem>
@@ -50,7 +50,7 @@
         <Label Content="Wpisz poprawny adres (1-247)" Height="26" HorizontalAlignment="Left" Margin="228,393,0,0" Name="BladAdresSlaveLabel" VerticalAlignment="Top" Width="190" />
         <Label Content="Wpisz poprawną ilość wejść (1-32)" Height="26" HorizontalAlignment="Left" Margin="228,442,0,0" Name="BladIloscWejscLabel" VerticalAlignment="Top" Width="190" />
         <Label Content="Wpisz poprawną ilość wyjść (1-32)" Height="26" HorizontalAlignment="Left" Margin="228,491,0,0" Name="BladIloscWyjscLabel" VerticalAlignment="Top" Width="190" />
-        <Button Content="Dodaj urządzenie do systemu" Height="33" HorizontalAlignment="Left" Margin="255,530,0,0" Name="button2" VerticalAlignment="Top" Width="150" />
+        <Button Content="Dodaj urządzenie do systemu" Height="33" HorizontalAlignment="Left" Margin="255,530,0,0" Name="dodajUrzadzenie" VerticalAlignment="Top" Width="150" Click="dodajUrzadzenie_Click" />
         <TextBox Height="35" HorizontalAlignment="Left" Margin="90,393,0,0" Name="DodajAdresTextbox" VerticalAlignment="Top" Width="120" />
     </Grid>
 </Window>
