--- a/KontrolerKomunikacyjny/MainWindow.xaml
+++ b/KontrolerKomunikacyjny/MainWindow.xaml
@@ -37,10 +37,6 @@
         <Label Content="LISTA URZĄDZEŃ W SYSTEMIE" Height="28" HorizontalAlignment="Left" Margin="464,382,0,0" Name="label2" VerticalAlignment="Top" Width="209" />
         <Label Height="205" HorizontalAlignment="Left" Margin="464,416,0,0" Name="UrzadzeniaWSystemieLabel" VerticalAlignment="Top" Width="329" />
         <Label Content="LISTA PROTOTYPÓW URZĄDZEŃ" Height="28" HorizontalAlignment="Left" Margin="10,127,0,0" Name="label9" VerticalAlignment="Top" Width="189" />
-        <ListBox Height="142" HorizontalAlignment="Left" Margin="12,153,0,0" Name="listBox1" VerticalAlignment="Top" Width="168" ItemsSource="{Binding}" SelectionChanged="listBox1_SelectionChanged"  >
-            <ListBoxItem>Coil thingy</ListBoxItem>
-            <ListBoxItem>3wejścia2wyjścia</ListBoxItem>
-        </ListBox>
         <Label Height="26" HorizontalAlignment="Left" Margin="12,349,0,0" Name="prototypeLabel" VerticalAlignment="Top" Width="168" />
         <Label Content="Adres slave" Height="26" HorizontalAlignment="Left" Margin="18,393,0,0" Name="label3" VerticalAlignment="Top" Width="130" />
         <Label Content="Ilość wejść" Height="26" HorizontalAlignment="Left" Margin="18,442,0,0" Name="label4" VerticalAlignment="Top" Width="130" />
@@ -52,5 +48,6 @@
         <Label Content="Wpisz poprawną ilość wyjść (1-32)" Height="26" HorizontalAlignment="Left" Margin="228,491,0,0" Name="BladIloscWyjscLabel" VerticalAlignment="Top" Width="190" />
         <Button Content="Dodaj urządzenie do systemu" Height="33" HorizontalAlignment="Left" Margin="255,530,0,0" Name="dodajUrzadzenie" VerticalAlignment="Top" Width="150" Click="dodajUrzadzenie_Click" />
         <TextBox Height="35" HorizontalAlignment="Left" Margin="90,393,0,0" Name="DodajAdresTextbox" VerticalAlignment="Top" Width="120" />
+        <ListBox Height="143" HorizontalAlignment="Left" Margin="12,152,0,0" Name="prototypyListBox" VerticalAlignment="Top" Width="237" SelectionChanged="prototypyListBox_SelectionChanged" />
     </Grid>
 </Window>
