--- a/KontrolerKomunikacyjny/MainWindow.xaml
+++ b/KontrolerKomunikacyjny/MainWindow.xaml
@@ -1,11 +1,11 @@
 ﻿<Window x:Class="KontrolerKomunikacyjny.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      Title="Kontroler komunikacyjny na intefejsie RS" Height="717" Width="1093">
-    <Grid Height="681" Width="1061">
+      Title="Kontroler komunikacyjny na intefejsie RS" Height="772" Width="1093" Name="window1">
+    <Grid Height="731" Width="1061" Name="grid1">
         <Grid.RowDefinitions>
-            <RowDefinition Height="538*" />
-            <RowDefinition Height="6*" />
+            <RowDefinition Height="662*" />
+            <RowDefinition Height="7*" />
         </Grid.RowDefinitions>
         <Button Content="Otwórz plik XML" Height="67" HorizontalAlignment="Left" Margin="7,6,0,0" Name="OtworzPrzycisk" VerticalAlignment="Top" Width="117" Click="otworzPrzycisk" />
         <Button Content="Wyślij" Height="58" HorizontalAlignment="Left" Margin="542,296,0,0" Name="WyslijPrzycisk" VerticalAlignment="Top" Width="120" Click="WyslijPrzycisk_Click" />
