--- a/KontrolerKomunikacyjny/MainWindow.xaml
+++ b/KontrolerKomunikacyjny/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       Title="Kontroler komunikacyjny na intefejsie RS" Height="772" Width="1093" Name="window1">
-    <Grid Height="731" Width="1061" Name="grid1">
+    <Grid Height="731" Width="1061" Name="grid1" ShowGridLines="False">
         <Grid.RowDefinitions>
             <RowDefinition Height="662*" />
             <RowDefinition Height="7*" />
@@ -43,7 +43,7 @@
         <ListBox Height="95" HorizontalAlignment="Left" Margin="212,352,0,0" Name="urzadzeniaListBox" VerticalAlignment="Top" Width="93" SelectionChanged="urzadzeniaListBox_SelectionChanged" />
         <Label Content="LISTA URZĄDZEŃ W SYSTEMIE" Height="28" HorizontalAlignment="Left" Margin="212,327,0,0" Name="label11" VerticalAlignment="Top" Width="209" />
         <Button Content="Usuń urządzenie z systemu" Height="33" HorizontalAlignment="Left" Margin="212,453,0,0" Name="usunUrzadzenieButton" VerticalAlignment="Top" Width="150" Click="usunUrzadzenieButton_Click_1" />
-        <Button Content="Dodaj urządzenie do systemu" Height="33" HorizontalAlignment="Left" Margin="220,538,0,0" Name="dodajUrzadzenie" VerticalAlignment="Top" Width="150" />
+        <Button Content="Ustaw opcje urządzenia" Height="33" HorizontalAlignment="Left" Margin="235,647,0,0" Name="ustawOpcjeButton" VerticalAlignment="Top" Width="150" Click="ustawOpcjeButton_Click" />
         <Label Content="OPCJE URZĄDZENIA: " Height="28" HorizontalAlignment="Left" Margin="4,538,0,0" Name="label1" VerticalAlignment="Top" Width="198" />
         <Label Height="26" HorizontalAlignment="Left" Margin="4,561,0,0" Name="prototypeLabel" VerticalAlignment="Top" Width="168" />
         <Label Content="Adres slave" Height="26" HorizontalAlignment="Left" Margin="463,605,0,0" Name="label3" VerticalAlignment="Top" Width="130" />
